@@ -3,6 +3,7 @@ Revision history for Spreadsheet-HTML
 0.32
     - now using Spreadsheet::Read for csv,xls files
     - better data generation for checkers/chess
+    - animate now copies cell styles across
 
 0.31
     - updated docs example tables
